Noteworthy changes in version 2.5.9 (unreleased)
------------------------------------------------

  * gpg: Add the revocation reason to the sigclass of a "rev" line.
    Regression in 2.5.7.  [T7073]

  * gpg: Do not show the non-standard secp256k1 curve in the menu to
    select the curve.  It can however be specified using its name.


  Release-info: https://dev.gnupg.org/T7695


Noteworthy changes in version 2.5.8 (2025-06-20)
------------------------------------------------

  * gpg: Show revocation reason with a standard -k listing.  [T7083]

  * gpg: Emit a revocation reason as comment in a "pub" record.
    [T7083]

  * agent: Fix regression in 2.5.7 decrypting with a card based
    cv25519 key.  [T7676]

  * scd:openpgp: Fix a regression in exporting card based ed25519 ssh
    keys.  [T7589]

  * dirmngr: Do not require a keyserver for "gpg --fetch-key".
    [T7693]


  See-also: gnupg-announce/2025q2/000494.html
  Release-info: https://dev.gnupg.org/T7672


Noteworthy changes in version 2.5.7 (2025-06-02)
------------------------------------------------

  * gpg: Allow updating a SHA-1 key certification w/o using
    the --force-sign-key option.  [T7663]

  * gpg: The group key flag has now been fully implemented.
    [rG8833a34bf0]

  * gpg: Make combination of show-only-fpr-mbox and show-unusable-uid
    work.  [rGd5a4a2dc89]

  * gpg: Do not allow compressed key packets on import.  [T7014]

  * gpgsm: Allow an empty subject DN also during import.  [T7171]

  * agent: Recover the old behavior with max-cache-ttl=0.  [T6681]

  * agent: Fix ECC key on smartcard for composite KEM with PQC.
    [T7648]

  * scd: Fix a harmless read buffer over-read in a function used by
    PKCS#15 cards.  [T7662]

  * gpg-mail-tube,wks: Support templates for mail content.  [T7381]

  * Use the KEM interface of Libgcrypt for encryption/decryption.
    [T7649]

  * Fix a glitch in socket handling in Windows in case of a nonce
    mismatch.  [rG645cf7d8fc]

